fix horizontal scroll

--- a/test_page-flex/Test Client Integration Page_files/screen.css
+++ b/test_page-flex/Test Client Integration Page_files/screen.css
@@ -10794,38 +10794,26 @@
     width: 50% !important;
   }
 }
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-popup-histogram,
 .bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-table {
   width: 100% !important;
 }
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary .bv-flex-container,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-popup-histogram .bv-flex-container,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-table .bv-flex-container {
+.bv-cv2-cleanslate .bv-core-container-2157 .bv-flex-container {
   display: -ms-flexbox !important;
   display: flex !important;
   -ms-flex-direction: row !important;
   flex-direction: row !important;
 }
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary .bv-flex-item:first-child,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-popup-histogram .bv-flex-item:first-child,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-table .bv-flex-item:first-child {
+.bv-cv2-cleanslate .bv-core-container-2157 .bv-flex-item:first-child {
   width: 25% !important;
 }
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary .bv-flex-item:last-child,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-popup-histogram .bv-flex-item:last-child,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-table .bv-flex-item:last-child {
+.bv-cv2-cleanslate .bv-core-container-2157 .bv-flex-item:last-child {
   width: 70% !important;
   margin-left: auto !important;
 }
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary .bv-secondary-rating-summary-rating,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-popup-histogram .bv-secondary-rating-summary-rating,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-table .bv-secondary-rating-summary-rating {
+.bv-cv2-cleanslate .bv-core-container-2157 .bv-secondary-rating-summary-rating {
   float: right !important;
 }
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary .bv-flex-container-column,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-popup-histogram .bv-flex-container-column,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-table .bv-flex-container-column {
+.bv-cv2-cleanslate .bv-core-container-2157 .bv-flex-container-column {
   display: -ms-flexbox !important;
   display: flex !important;
   -ms-flex-direction: column !important;
@@ -10834,16 +10822,12 @@
   min-width: 200px !important;
   margin: 10px 10px 20px !important;
 }
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary .bv-flex-container-column .bv-flex-container,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-popup-histogram .bv-flex-container-column .bv-flex-container,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-table .bv-flex-container-column .bv-flex-container {
+.bv-cv2-cleanslate .bv-core-container-2157 .bv-flex-container-column .bv-flex-container {
   margin: 3px 0 !important;
   -ms-flex-align: center !important;
   align-items: center !important;
 }
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary .bv-flex-container-column .bv-flex-container .div,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-popup-histogram .bv-flex-container-column .bv-flex-container .div,
-.bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-table .bv-flex-container-column .bv-flex-container .div {
+.bv-cv2-cleanslate .bv-core-container-2157 .bv-flex-container-column .bv-flex-container .div {
   margin: auto !important;
 }
 .bv-cv2-cleanslate .bv-core-container-2157 .bv-section-summary-inline .bv-secondary-rating-summary {
